--- a/latex_src/the_awk_language.tex
+++ b/latex_src/the_awk_language.tex
@@ -21,7 +21,7 @@
 的动作就会执行. 一个缺失的模式匹配每一个输入行, 因此每一个不带有模式的动
 作对每一个输入行都会执行. 只含有模式而没有动作的语句, 会打印每一个匹配模式
 的输入行. 大部分情况下, 在这一章出现的术语 ``输入行'' 与 ``记录'' 被当作
-一对同义词. 在 \ref{sec:input} 节, 我们会讨论多行记录, 多行记录指的
+一对同义词. 在 \ref{sec:input} 节, 我们会讨论多行记录, 多行记录指
 由多行数据组成的单个记录.
 
 本章的第一节详细讨论模式. 第二节通过描述表达式, 赋值语句与流程控制语句,
