change order according to original content

--- a/latex_src/the_awk_language.tex
+++ b/latex_src/the_awk_language.tex
@@ -193,7 +193,7 @@
 运算符要求一个数值时, 字符串被自动转换成数值.
 
 任意一个表达式都可以当作模式来使用. 如果一个作为模式使用的表达式, 对当前
-输入行的求值结果不空或非零, 那么该模式就匹配该行. 典型的表达式模式是那些
+输入行的求值结果非零或不为空, 那么该模式就匹配该行. 典型的表达式模式是那些
 涉及到数值或字符串比较的表达式. 一个比较表达式包含 6 种关系运算符中的一种,
 或者包含两种字符串匹配运算符中的一种: \verb'~' 与 \verb'!~' 在下一小节讨论.
 关系运算符列在表 \ref{tbl:comparison_operators} 中.
