--- a/latex_src/the_awk_language.tex
+++ b/latex_src/the_awk_language.tex
@@ -289,9 +289,9 @@ shell. 受限形式的正则表达式也出现在其他系统中, 在 MS-DOS 中
 \begin{awkcode}
     /Asia/
 \end{awkcode}
-这个模式匹配那些含有子字符串 \verb'Asia' 的输入行, 例如 \verb'Asia',
-\verb'Asian', 或 \verb'Pan-Asiatic'. 注意, 正则表达式中空格是有意义的: 字
-符串匹配模式
+这个模式匹配那些含有子字符串 \verb'Asia' 的输入行, 例如 \verb'Asia' 本身,
+或像 \verb'Asian', \verb'Pan-Asiatic' 这样更大单词的一部分.
+注意, 正则表达式中空格是有意义的: 它是字符串匹配模式
 \marginpar{27}
 \begin{summary}{字符串匹配模式}
     \begin{enumerate}
