--- a/latex_src/the_awk_language.tex
+++ b/latex_src/the_awk_language.tex
@@ -698,7 +698,7 @@ Awk 不存在显式的拼接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
     \expr       & \verb'$3 < 100' & 第3个字段小于100的行 \\
     \textit{string-matching} & \verb'/Asia/' & 含有 \verb'Asia' 的行 \\
     \textit{compound}   & \verb'$3 < 100 && $4 == "Asia"' & 第3个字段小于
-        100 并且第 4 个字段含有  \verb'Asia' 的行 \\
+        100 并且第 4 个字段是  \verb'Asia' 的行 \\
     \textit{range} & \verb'NR==10, NR==20' & 输入的第10行到第20行. \\
     \hline
 \end{tabular}
