add missing escape char

--- a/latex_src/the_awk_language.tex
+++ b/latex_src/the_awk_language.tex
@@ -521,7 +521,7 @@ Awk 不存在显式的拼接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
 (\term{escape sequences}){}---去表示那些无法用其他方式表示的字符. 例如,
 \verb'\n'
 表示一个换行符, 它无法以其他方式出现在字符串或正则表达式中; \verb'\b' 表示
-退格符; \verb'\t' 表示制表符; \verb'007' 表示 ASCII 中的响铃符; \verb'\/'
+退格符; \verb'\t' 表示制表符; \verb'\007' 表示 ASCII 中的响铃符; \verb'\/'
 表示一个斜杠. 转义序列在 awk 程序中才会有特殊的意义; 如果在数据中, 它们则
 是普通的字符. 完整的转义序列名单在表 \ref{tbl:escape_sequences}.
 \begin{figure}[ht]
