--- a/latex_src/data_processing.tex
+++ b/latex_src/data_processing.tex
@@ -140,7 +140,7 @@ Awk 最常用的一个功能是把数据从一种形式转换成另一种形式,
 
 假设我们不想知道每列的总和, 但是想知道每一列所占的百分比, 要完成这个工作就
 必须对数据遍历两遍. 如果只有一列是数值, 而且也没有太多的数据, 最简单的办法
-是在第一次遍历时, 把数值存储在一个数组中, 每二次遍历时计算百分比并把它打印
+是在第一次遍历时, 把数值存储在一个数组中, 第二次遍历时计算百分比并把它打印
 出来:
 \begin{awkcode}
      # percent
