--- a/latex_src/data_processing.tex
+++ b/latex_src/data_processing.tex
@@ -179,7 +179,7 @@ Awk 最常用的一个功能是把数据从一种形式转换成另一种形式,
         return t
     }
 \end{awkcode}
-需要注意的是后缀递增运算符 \verb'--' 如何控制 \verb'while' 循环.
+需要注意的是后缀递减运算符 \verb'--' 如何控制 \verb'while' 循环.
 
 我们可以用随机生成的成绩测试 \verb'histogram'. 管道线上的第一个程序随机
 生成 200 个 0 到 100 的整数, 并把这些整数输送给 \verb'histogram'
