--- a/latex_src/data_processing.tex
+++ b/latex_src/data_processing.tex
@@ -318,7 +318,7 @@ Awk 最常用的一个功能是把数据从一种形式转换成另一种形式,
 
 \begin{exercise}
     \label{exer:date}
-    将日期转换成某种形式, 这种形式充许你对日期进行算术运算, 例如计算某两
+    将日期转换成某种形式, 这种形式允许你对日期进行算术运算, 例如计算某两
     个日期之间的天数.
 \end{exercise}
 
