--- a/latex_src/data_processing.tex
+++ b/latex_src/data_processing.tex
@@ -471,7 +471,7 @@ the sum of one hundred twenty three dollars and 45 cents exactly
 
 日期通过
 \begin{awkcode}
-    "data" | getline data   # get today's date
+    "date" | getline date   # get today's date
 \end{awkcode}
 从系统获取, 该行执行 \verb'date', 再把它的输出输送给 \verb'getline'. 为了把
 \begin{awkcode}
