--- a/latex_src/reports_and_databases.tex
+++ b/latex_src/reports_and_databases.tex
@@ -1181,7 +1181,7 @@ awk 程序.
 \section{小结}
 \label{sec:reports_and_databases_summary}
 在这一章, 我们主要学习了如何使用 awk, 按照结构化的方式来访问和打印信息,
-正好和 \ref{chap:data_processing} 章形成对照, 因为第
+正好和第 \ref{chap:data_processing} 章形成对照, 因为第
 \ref{chap:data_processing} 章使用 awk 的方式都是专门针对某一具体的问题,
 这种情况更加典型.
 
