--- a/latex_src/processing_words.tex
+++ b/latex_src/processing_words.tex
@@ -183,7 +183,7 @@ girl runs very very quickly'' 这样的句子可以用下面的语法描述:
 分成动词与副词, 而不是把动词与副词组合成动词短语.
 
 \texttt{Modlist} 的产生式比较有趣. 一条规则是说用 \texttt{very Modlist}
-替换 \texttt{Modlist}, 每次使用这条规则都会使句子变长. 幸运地是, 只要运用
+替换 \texttt{Modlist}, 每次使用这条规则都会使句子变长. 幸运的是, 只要运用
 另一条产生式规则 (该规则用空字符串替换掉 \texttt{Modlist}) 就可以终止潜在
 的无限循环.
 
