--- a/latex_src/processing_words.tex
+++ b/latex_src/processing_words.tex
@@ -640,7 +640,7 @@ girl runs very very quickly'' 这样的句子可以用下面的语法描述:
 \texttt{Category}. 在整篇文档中, 某一条目总是通过它的符号名来引用. 我们 
 规定符号名以下划线开始并结尾, 不过也可以使用其他任意的名字, 前提是
 你可以从文本中把它们分离出来 (条目的名字不可以相同, 即使它们在不同的
-类别中). 名字 \texttt{.\#Fig} 与 \texttt{.\#Big} 以句点开始, 这样的话即使
+类别中). 名字 \texttt{.\#Fig} 与 \texttt{.\#Bib} 以句点开始, 这样的话即使
 交叉引用未被解析, 格式化程序 \texttt{troff} 也可以忽略它们 (对于不同的
 格式化程序, 我们可能需要作不同的约定)
 
