--- a/latex_src/awk_summary.tex
+++ b/latex_src/awk_summary.tex
@@ -235,8 +235,8 @@
     \begin{tabular}{ll}
         \texttt{gsub(}\textit{r}\texttt{,} \textit{s}\texttt{,}
         \textit{t}\texttt{)} &
-        \makecell[tl]{全局地替换 \textit{s} 中被 \textit{r} 匹配的 
-        子字符串 \textit{t}, 返回替换发生的次数; \\ 如果省略 \textit{t},
+        \makecell[tl]{全局地把 \textit{t} 中被 \textit{r} 匹配的每一个
+        子字符串替换为 \textit{s}, 返回替换发生的次数; \\ 如果省略 \textit{t},
         则默认使用 \texttt{\$0}} \\
 
         \texttt{index(}\textit{s}\texttt{,} \textit{t}\texttt{)} &
