translation improve for "square root"

--- a/latex_src/awk_summary.tex
+++ b/latex_src/awk_summary.tex
@@ -293,7 +293,7 @@
 
         \texttt{sin(}\textit{x}\texttt{)} \> 正弦 (弧度制) \\
 
-        \texttt{sqrt(}\textit{x}\texttt{)} \> 方根 \\
+        \texttt{sqrt(}\textit{x}\texttt{)} \> 平方根 \\
 
         \texttt{srand(}\textit{x}\texttt{)} \> 设置随机数种子, 如果省略
         \textit{x}, 则默认使用当天的时间
