--- a/latex_src/awk_summary.tex
+++ b/latex_src/awk_summary.tex
@@ -300,7 +300,7 @@
     \end{tabbing}
 \end{quote}
 
-\subsubsection{表示式运算符 (按优先级递增排列)}
+\subsubsection{表达式运算符 (按优先级递增排列)}
 表达式可以通过下列运算符进行组合:
 \begin{quote}
     \begin{tabbing}
