--- a/latex_src/awk_summary.tex
+++ b/latex_src/awk_summary.tex
@@ -407,7 +407,7 @@
     var = expr
 \end{awkcode}
 它的类型也会被设置成表达式的类型 (``赋值'' 包括 \texttt{+=}, \texttt{-=},
-等等). 算术表达式的类型是数值, 拼接是字符串, 以此类推. 如果赋值语句 
+等等). 算术表达式的类型是数值, 拼接是字符串类型, 以此类推. 如果赋值语句
 只是一个简单的复制, 比如 \texttt{v1 = v2}, 那么 \texttt{v1} 就会被
 设置成 \texttt{v2} 的类型.
 
