translate regular expression "character class" to "字符类"
this aligns with chapter 2's translation

--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -50,7 +50,7 @@
 
 \hangindent=2pc \hangafter=1 \verb'%' format conversion (格式转换) 42, 189
 
-\hangindent=2pc \hangafter=1 \verb'-' in character class (字符集中的
+\hangindent=2pc \hangafter=1 \verb'-' in character class (字符类中的
 \verb'-') 29
 
 \hangindent=2pc \hangafter=1 \verb'%%' in \verb'printf' (\verb'printf' 中的
@@ -356,12 +356,12 @@
 
 \hangindent=2pc \hangafter=1 changing \verb'ARGV' (修改 \verb'ARGV') 64-65, 116
 
-\hangindent=2pc \hangafter=1 character class, \verb'-' in (字符集) 29
+\hangindent=2pc \hangafter=1 character class, \verb'-' in (字符类) 29
 
-\hangindent=2pc \hangafter=1 character class, complemented (互补字符集) 29
+\hangindent=2pc \hangafter=1 character class, complemented (互补字符类) 29
 
 \hangindent=2pc \hangafter=1 character class, regular expression
-(正则表达式中的字符集) 29
+(正则表达式中的字符类) 29
 
 \hangindent=2pc \hangafter=1 characters, table of escape (转义字符总结,
 表格) 31
@@ -492,7 +492,7 @@ v, 181, 184, 186
 
 \hangindent=2pc \hangafter=1 compiler model (编译器模型) 131
 
-\hangindent=2pc \hangafter=1 complemented character class (互补字符集) 29
+\hangindent=2pc \hangafter=1 complemented character class (互补字符类) 29
 
 \hangindent=2pc \hangafter=1 compound patterns (复合模式) 31
 
@@ -1857,7 +1857,7 @@ v, 79, 121, 167
 \verb'?') 30
 
 \hangindent=2pc \hangafter=1 regular expression character class (正则表达式中 
-的字符集) 29
+的字符类) 29
 
 \hangindent=2pc \hangafter=1 regular expression, concatenation in
 (正则表达式中的拼接) 29
