--- a/latex_src/awk_summary.tex
+++ b/latex_src/awk_summary.tex
@@ -350,8 +350,8 @@
         \texttt{\^}     & 匹配一个字符串的开始 \\
         \texttt{\$}     & 匹配一个字符串的结束 \\
         \texttt{.}      & 匹配任意一个字符 \\
-        \texttt{[}\textit{abc...}\texttt{]} & 字符集合: 匹配 \textit{abc...} 中的任意一个字符 \\
-	\texttt{[}\texttt{\^}\textit{abc...}\texttt{]} & 字符集合: 匹配任意一个不在 \textit{abc...} 中的字符 \\
+        \texttt{[}\textit{abc...}\texttt{]} & 字符类: 匹配 \textit{abc...} 中的任意一个字符 \\
+        \texttt{[}\texttt{\^}\textit{abc...}\texttt{]} & 字符类: 匹配任意一个不在 \textit{abc...} 中的字符 \\
         \textit{$r_1$}\texttt{|}\textit{$r_2$} & 选择: 匹配一个能被 \textit{$r_1$} 或 \textit{$r_2$} 匹配的字符串 \\
         \texttt{(}\textit{$r_1$}\texttt{)}\texttt{(}\textit{$r_2$}\texttt{)} & 拼接: 匹配字符串
         \textit{xy}, 其中 \textit{x} 被 \textit{$r_1$} 匹配, \textit{y} 被 \textit{$r_2$} 匹配 \\
@@ -392,7 +392,7 @@
     每个字段 1024 个字符 \par
     每个 \texttt{printf} 字符串 3000 个字符 \par
     字面字符串 400 个字符 \par
-    字符集合 400 个字符 \par
+    字符类 400 个字符 \par
     15 个打开文件 \par
     1 个管道 \par
     双精度浮点数
