--- a/latex_src/awk_summary.tex
+++ b/latex_src/awk_summary.tex
@@ -351,7 +351,7 @@
         \texttt{\$}     & 匹配一个字符串的结束 \\
         \texttt{.}      & 匹配任意一个字符 \\
         \texttt{[}\textit{abc...}\texttt{]} & 字符集合: 匹配 \textit{abc...} 中的任意一个字符 \\
-	\texttt{[}\texttt{\^}\textit{abc...}\texttt{]} & 字符集合: 匹配不在 \textit{abc...} 中的任意一个字符 \\
+	\texttt{[}\texttt{\^}\textit{abc...}\texttt{]} & 字符集合: 匹配任意一个不在 \textit{abc...} 中的字符 \\
         \textit{$r_1$}\texttt{|}\textit{$r_2$} & 选择: 匹配一个能被 \textit{$r_1$} 或 \textit{$r_2$} 匹配的字符串 \\
         \texttt{(}\textit{$r_1$}\texttt{)}\texttt{(}\textit{$r_2$}\texttt{)} & 拼接: 匹配字符串
         \textit{xy}, 其中 \textit{x} 被 \textit{$r_1$} 匹配, \textit{y} 被 \textit{$r_2$} 匹配 \\
