--- a/latex_src/experiments_with_algorithms.tex
+++ b/latex_src/experiments_with_algorithms.tex
@@ -656,7 +656,7 @@ J. W. J. Williams 和 R. W. Floyd 在 60 年代早期提出.
 具有最大值的元素总是在根节点 (这个位置称为 ``堆顶'').
 
 如果我们用一个数组 \texttt{A} 来模拟堆, 那么就不需要构造显式的二叉树.
-树中的节点按照宽度优先遍历的顺序出现在数组中, 也就是说, 根节点在
+树中的节点按照广度优先遍历的顺序出现在数组中, 也就是说, 根节点在
 \texttt{A[1]}, 它的左孩子与右孩子分别在 \texttt{A[2]} 和 \texttt{A[3]}.
 总的来说, 如果某个节点在 \texttt{A[}\textit{i}\texttt{]}, 那么它的孩子就
 在 \texttt{A[2}\textit{i}\texttt{]} 和 \texttt{A[2}\textit{i}\texttt{+1]},
