fix translation for "make"

--- a/latex_src/experiments_with_algorithms.tex
+++ b/latex_src/experiments_with_algorithms.tex
@@ -1505,8 +1505,8 @@ $t_1$, $t_2$, ..., $t_n$, 其中 $t_i$ 是文件名或另一个 \textit{name}.
 \begin{enumerate}
     \item 
         在 \texttt{makefile} 中搜索 \textit{name} 对应的规则, 并递归
-        地更新依赖关系右边的目标 $t_1$, $t_2$, ..., $t_n$, 如果某个 
-        $t_i$ 不是一个名字, 或者文件 $t_i$ 不存在, 程序就会中止更新过程.
+        地更新依赖关系右边的目标 $t_1$, $t_2$, ..., $t_n$, 如果某个
+        $t_i$ 不是一个名字, 并且文件 $t_i$ 不存在, 程序就会终止更新过程.
     \item 
         在更新完所有的 $t_i$ 之后, 如果当前的 \textit{name} 比某个
         $t_i$ 老, 又或者是 \textit{name} 没有目标, 程序就会执行依赖
