add missing translation for "make"

--- a/latex_src/experiments_with_algorithms.tex
+++ b/latex_src/experiments_with_algorithms.tex
@@ -1522,7 +1522,7 @@ $t_1$, $t_2$, ..., $t_n$, 其中 $t_i$ 是文件名或另一个 \textit{name}.
 对文件进行排序 (越新的文件越靠前), 排序的依据是文件最后的修改时间. 文件 
 名将作为数组 \texttt{age} 的索引, 而数组元素的值则是文件在排序序列中的
 名次, 最老的文件拥有最大值的名次. 如果规则中的名字不是当前目录中的文件
-名, \texttt{make} 就把它的时间设置成一个很大的值.
+名, \texttt{make} 就把它的时间设置成一个很大的值, 以确保它足够老.
 
 最后, \texttt{make} 使用上一节讲过的深度优先搜索来遍历依赖图. 在节点
 \textit{n}, \texttt{make} 遍历 \textit{n} 的后继节点, 如果存在某个后继
