reformat reports_and_databases.tex

--- a/latex_src/reports_and_databases.tex
+++ b/latex_src/reports_and_databases.tex
@@ -274,8 +274,8 @@ Report No. 3       POPULATION, AREA, POPULATION DENSITY         January 1, 1988
     该国所在的大洲的总人口
     该国所在的大洲的面积
 \end{awkcode}
-注意 \verb'sort' 的命令行参数, 该命令行参数使得排序后的记录先按照第 1 个字 
-段的字母顺序排列, 再按第 7 个字段的数值形式的逆序排列. 
+注意 \verb'sort' 的命令行参数, 该命令行参数使得排序后的记录先按照第 1 个
+字段的字母顺序排列, 再按第 7 个字段的数值形式的逆序排列. 
 
 键入下面的命令行, 就可以生成前面那张精美的报表 \texttt{Report No. 3}:
 \begin{awkcode}
