reformat index.tex

--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -331,8 +331,7 @@
 
 \hangindent=2pc \hangafter=1 \verb'bridge' program (程序 \verb'bridge') 199
 
-\hangindent=2pc \hangafter=1 built-in variables, table of (内建变量总结, 
-表格) 36
+\hangindent=2pc \hangafter=1 built-in variables, table of (内建变量总结, 表格) 36
 
 \hangindent=2pc \hangafter=1 \verb'bundle' program (程序 \verb'bundle') 81
 
