typo fix "atan2" for "Reverse-Polish Calculator"

--- a/latex_src/little_languages.tex
+++ b/latex_src/little_languages.tex
@@ -709,7 +709,7 @@ Forth 和 Postscript) 和便捷计算器都把它作为基本表示法来使用.
 则不会打印出任何值. 一个典型的交互过程看起来就像这样 (由程序打印的内容
 向右缩进):
 \begin{awkcode}
-    0 -1 stan2 pi=
+    0 -1 atan2 pi=
     pi 
         3.1415927
     355 113 / x= x
