improve translation for "syntax-directed"

--- a/latex_src/little_languages.tex
+++ b/latex_src/little_languages.tex
@@ -923,7 +923,7 @@ Forth 和 Postscript) 和便捷计算器都把它作为基本表示法来使用.
 在这一节, 我们为 awk 的子集开发一个递归下降翻译器, 开发语言还是用 awk.
 其中处理算术表达式的部分和我们在上一节里展示的程序, 在本质上是一样的.
 为了增加真实性, 翻译器将会生成 C 程序, 原来代码中的 awk 运算符用函数
-调用来替换. 这个程序在一定程度上说明了语法制导翻译的原理, 以及生成
+调用来替换. 这个程序在一定程度上说明了语法导向翻译的原理, 以及生成
 C 版本 awk 程序的一种方式, C 程序运行起来更快, 也很容易扩展.
 基本思路是用函数调用替换掉每一个算术运算符, 比如, \texttt{x=y} 变成
 \texttt{assign(x,y)}, \texttt{x+y} 变成 \texttt{eval("+",x,y)}. 主输入
