在过长的地方手工断行

--- a/latex_src/little_languages.tex
+++ b/latex_src/little_languages.tex
@@ -219,7 +219,7 @@
 \end{awkcode}
 
 数组 \texttt{symtab} 记录标号的内存地址, 如果当前输入行没有标号, 那么内存
-地址赋值给 \texttt{symtab[""]}.
+地址赋值给 \\ \texttt{symtab[""]}.
 
 标号是汇编语句的第一个字段, 操作符前面有一个空格符. 第一次遍历前, 把
 \marginpar{135}
