--- a/latex_src/processing_words.tex
+++ b/latex_src/processing_words.tex
@@ -961,7 +961,8 @@ KWIC 索引程序: 分而治之. 任务被细分成一系列小任务, 每个小
 \end{awkcode}
 
 下一个程序 \texttt{ix.rotate} 为索引字生成旋转, 例如根据 ``\texttt{string
-comparison}'' 生成 ``\texttt{comparison, string}''. 旋转操作与 KWIC
+comparison}'' 生成 \\
+``\texttt{comparison, string}''. 旋转操作与 KWIC
 索引制作过程中出现的旋转大致相同, 虽然我们用了不同的方法来编写. 注意 
 \texttt{for} 循环中的赋值表达式.
 \begin{awkcode}
