--- a/latex_src/little_languages.tex
+++ b/latex_src/little_languages.tex
@@ -304,6 +304,7 @@
 的输出是\footnote{英文原版没有给出完整的统计数据, 下面这张表的统计数据来自
     \url{https://en.wikipedia.org/wiki/List_of_motor_vehicle_deaths_in_U.S._by_year}
  --- 译者注}:
+\pagebreak[4]
 {\footnotesize
 \begin{lstlisting}[basicstyle = \ttfamily, lineskip = -2pt]
       |------------------------------------------------------------------------|
