Revert changes made by commit 1d36e8637
这些修改不适用双面排版后的效果, 但我们仍然需要合并, 以便日后
的合并能更加方便.

--- a/latex_src/awk_summary.tex
+++ b/latex_src/awk_summary.tex
@@ -236,8 +236,8 @@
         \texttt{gsub(}\textit{r}\texttt{,} \textit{s}\texttt{,}
         \textit{t}\texttt{)} &
         \makecell[tl]{全局地把 \textit{t} 中被 \textit{r} 匹配的每一个
-        子字符串替换为 \textit{s}, 返回 \\
-        替换发生的次数; 如果省略 \textit{t}, 则默认使用 \texttt{\$0}} \\
+        子字符串替换为 \textit{s}, 返回替换发生的次数; \\ 如果省略 \textit{t},
+        则默认使用 \texttt{\$0}} \\
 
         \texttt{index(}\textit{s}\texttt{,} \textit{t}\texttt{)} &
         返回 \textit{t} 在 \textit{s} 中的开始位置, 如果 \textit{s}
