--- a/latex_src/experiments_with_algorithms.tex
+++ b/latex_src/experiments_with_algorithms.tex
@@ -973,9 +973,7 @@ $n \log n$ 程序性能之间的差距急剧增大.
 \label{sec:profiling}
 
 在上一节中, 为了评价排序程序的性能, 我们计算了特定操作的执行次数. 评价
-程序性能的另一个有效方法是对程序进行剖析\footnote{``profiling'' 这个词 
-不好翻译, 暂且译作 ``剖析''.},
-也就是计算每条语句的执行次数.
+程序性能的另一个有效方法是对程序进行剖析, 也就是计算每条语句的执行次数.
 许多编程环境都会提供一个称为 \cterm{剖析器} (\term{profiler}) 的工具
 程序, 剖析器可以打印某个程序中每条语句的执行次数.
 
