fix typo, fix issue #42

--- a/latex_src/little_languages.tex
+++ b/latex_src/little_languages.tex
@@ -336,7 +336,7 @@
 \texttt{graph} 的处理程序分为两个阶段. 主循环读取并解析图的规范说明, 
 使用模式辨认不同类型的语句. 图的中间表示形式存放在若干个数组与变量中,
 如果必要的话, \texttt{END} 据此计算值的范围, 然后开始绘制边框, 刻度,
-标签和数据点. 输出操作被分散在若干个独立的函数中, 这样的话, 即使以后要为
+标签和数据点. 输出操作被封装在若干个独立的函数中, 这样的话, 即使以后要为
 特定的设备对代码进行修改, 也可以把修改局限在小范围内.
 
 到目前为止, 这是我们看过的最长的 awk 程序, 大约有 100 行, 其实它是本书
