--- a/latex_src/reports_and_databases.tex
+++ b/latex_src/reports_and_databases.tex
@@ -4,8 +4,8 @@
 
 \marginpar{89}
 这章展示如何使用 awk 从文件中提取信息, 并生成报表, 我们把重点放在表格数据,
-但是同样的技术也可以用在更加复杂的输入格式上. 本章的主题是开发一个可以与
-其他程序配合使用的程序. 我们将会看到大量的工作中会经常遇到的数据处理问题,
+但是同样的技术也可以用在更加复杂的格式上. 本章的主题是开发一个可以与
+其他程序配合使用的程序. 我们将会看到工作中会经常遇到的数据处理问题,
 这些问题很难一步解决, 但是如果多次遍历数据, 就相对比较容易一些.
 
 本章的第一部分讨论如何扫描单个文件来生成报表, 虽然控制报表的最终格式的
